# llmgateway

./: .env.example  .gitignore  .pre-commit-config.yaml  CODEBASE_DOCUMENTATION.md  CURRENT_MODEL_UPDATES_2025.md  Dockerfile  ENTERPRISE_FEATURES_IMPLEMENTATION.md  FREEMIUM_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  Makefile  PHASE5_IMPLEMENTATION_REPORT.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READY_IMPROVEMENTS.md  README-SAAS.md  README.md  TESTING_GUIDE.md  __init__.py  alembic.ini  context_for_new_features.txt  create_sample_data.py  docker-compose.yml  email_config.md  env_example.txt  example.py  llm_gateway.py  main.py  model_bridge.py  models_config.yaml  pyproject.toml  qa.txt  qa_test_suite.py  requirements-dev.txt  requirements-saas.txt  requirements.txt  run_tests.py  setup.py  test_api_integration.py  test_core_functionality.py  test_frontend.py  test_integration.py
advanced_routing/: __init__.py  geo_router.py  health_monitor.py  latency_monitor.py  load_balancer.py  pattern_analyzer.py  predictor.py  score_calculator.py  weight_manager.py
alembic/: env.py
alembic/versions/: 0d839d8237a7_add_last_login_at_to_user_model.py  239e7c75bb96_merge_heads_for_unified_migration.py  6bdcb5be9459_add_organizations_table.py  87ae90c02aad_add_is_deleted_and_deleted_at_to_roles.py  ad3f04c48711_initial_database_schema_with_string_ids.py  enterprise_features_migration.py  fd124c72f000_add_reset_token_and_verification_token_.py  monitoring_tables_migration.py  performance_indexes_migration.py
api/: main.py
api/routers/: ab_testing.py  admin.py  api_playground.py  auth.py  billing.py  contact.py  current_models.py  dashboard.py  documentation.py  llm.py  models_discovery.py  monitoring.py  orchestration.py  rbac.py  sso.py  workflow.py
auth/: dependencies.py  jwt_handler.py  rbac_middleware.py  sso.py
config/: geo_config.yaml
core/: config.py
cost_optimization/: __init__.py  arbitrage.py  budget_manager.py  cache_optimizer.py  cost_cache.py  cost_predictor.py  pricing_engine.py  provider_switcher.py  throttler.py  token_counter.py
database/: database.py
developer_experience/: __init__.py  api_playground.py  documentation_system.py  sdk_generator.py
login/: simple_auth.py  simple_test.py  test_auth.py  working_auth.py
login/backend/: auth_router.py  auth_service.py
login/frontend/: AuthContext.js  AuthService.js
login/frontend/components/: ForgotPassword.js  Login.js  Register.js  ResetPassword.js
middleware/: security_headers.py
models/: __init__.py  base.py  monitoring.py  rbac.py  user.py  workflow.py
monitoring/: alerts.py  metrics.py  monitoring_service.py  performance_optimizer.py  scalability_manager.py
orchestration/: __init__.py  ab_testing.py  model_evaluator.py  workflow_builder.py  workflow_engine.py  workflow_service.py
providers/: __init__.py  anthropic.py  base.py  cohere.py  deepseek.py  google.py  groq.py  huggingface.py  mistral.py  mock.py  ollama.py  ollama_enhanced.py  openai.py  openrouter.py  perplexity.py  together.py
scripts/: init_organizations.py  init_rbac.py
scripts/admin/: reset_password.py  test_billing.py
sdk/javascript/: modelbridge.js
sdk/python/: modelbridge.py
services/: dynamic_model_discovery.py
tests/: conftest.py  test_auth.py  test_billing.py  test_llm.py  test_monitoring.py  test_security.py
utils/: __init__.py  cache.py  config.py  logging_setup.py  ml_utils.py  validation.py
utils/auth/: email_service.py
web/: FIXED_ADVANCED_ROUTING.md  PHASE1_COMPLETION_REPORT.md  REAL_DATA_IMPLEMENTATION.md  demo_phase1.js  enterprise_features.txt  jest.config.js  package-lock.json  package.json  verify_phase1.sh
web/coverage/: clover.xml  coverage-final.json  lcov.info
web/coverage/lcov-report/: index.html
web/public/: index.html
web/src/: App.js  index.css  setupTests.js
web/src/__tests__/: ForgotPassword.test.js  Login.test.js  (+1 more)
(+86 files in other folders)
